--- a/styles/header.css
+++ b/styles/header.css
@@ -8,6 +8,7 @@ header {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid rgb(230, 230, 230);
+  background-color: white;
 }
 
 .left-object,
