--- a/styles/general.css
+++ b/styles/general.css
@@ -2,5 +2,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  padding-top: 46px;
+  padding-top: 56px;
+  padding-left: 72px;
 }
