--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,7 @@ header {
   align-items: center;
   border-bottom: 1px solid rgb(230, 230, 230);
   background-color: white;
+  z-index: 200;
 }
 
 .left-object,
