--- a/styles/main-area.css
+++ b/styles/main-area.css
@@ -106,3 +106,38 @@ main {
   border-radius: 50%;
   margin-right: 16px;
 }
+
+@media (max-width: 1400px) {
+  main {
+    grid-template-columns: repeat(3, 1fr)
+  }
+}
+
+@media (max-width: 900px) {
+  main {
+    grid-template-columns: repeat(2, 1fr)
+  }
+}
+
+@media (max-width: 500px) {
+  main {
+    grid-template-columns: repeat(1, 1fr)
+  }
+}
+
+@media (min-width: 1000px) {
+  .video-header > a {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .channel-name,
+  .viewers-count {
+    font-size: 14px;
+  }
+}
+
+
+
